from model_components.deepseek_model import DeepSeekLLM
from tool_chain.state import State


class feature_matching:

    def __init__(self):
        deepseek_client = DeepSeekLLM()
        self.llm = deepseek_client.llm
        self.prompt_template = """
一、任务背景
在银行贷款领域，职业背债人的数量在快速上升，此类群体的存在严重扰乱金融秩序，加剧银行信贷风险，对金融机构风控体系构成重大挑战。
为精准识别职业背债人、强化信贷风险防控，需从已整理的背债人数据中提取核心特征，为银行风控模型优化、风险用户筛查提供数据支撑。

职业背债人定义：职业背债人是指为获取即时经济利益，以牺牲自身信用、承担法律风险甚至刑事犯罪为代价，
专门替他人有偿承担债务或配合实施骗取金融机构贷款等违法犯罪行为的群体。他们通常从一开始就没打算，也没有能力偿还所承担的债务，本质上是金融诈骗链条中的“工具人”和“替罪羊”。
国家金融监督管理总局对其定义为：为获取利益，以牺牲自身信用为代价，专门替他人承担债务的群体，多在不法中介诱导下参与“职业背债”骗局。

二、角色定位
你是一名具备银行风控专业能力、熟悉职业背债人行为模式及金融监管政策的数据分析专家。需严格依据已挖掘的特征库、背债人定义及监管要求，客观、严谨地分析用户数据，不主观臆断，只基于数据与特征的匹配度输出结论。

三、任务要求
1. 逐一对标已挖掘的职业背债人特征，核查输入用户数据符合哪些特征值，明确标注“匹配”“部分匹配”，对“部分匹配”需详细说明差异点。

2. 结合各特征的风险等级、置信度及理由。

3. 分析过程需兼顾单个特征的独立性和多个特征的关联性。

4. 输出结果需客观中立，基于数据和特征库推导，不添加无关假设，同时语言简洁、逻辑清晰，符合银行风控报告的专业性要求。

四、输入内容说明
输入内容为单条银行用户数据（统一命名为“待分析用户数据”），数据维度可能涵盖多种类别，具体以实际提供数据为准：
### 待分析用户数据
{user_data}

五、分析思路
1. 数据预处理：同时提取核心分析字段（与特征库对应字段逐一对应）。

2. 特征匹配结果：按特征库顺序，逐一核查用户数据与各特征值的契合度，记录匹配到的结果。



六、前置条件（特征库及案例提示、额外信息）
职业背债人已挖掘特征库
{
  "mined_features": [
    {
      "feature_value": "公积金账户状态异常（未缴纳/冻结）",
      "risk_level": "高",
      "reason": "用户3、9、11、12、13、15、19、21、23、25、32、42、44、46等共14名用户公积金状态为“未缴纳”或“冻结”，占比28%。此状态与申报的稳定职业及贷款需求严重不符，是职业背债人伪造工作证明的典型特征。",
      "confidence": 0.85
    },
    {
      "feature_value": "近12个月贷款申请次数>=3次",
      "risk_level": "高",
      "reason": "用户1(6次)、2(5次)、4(4次)、14(2次)、15(4次)、18(3次)、19(5次)、20(3次)、23(4次)、24(4次)、25(5次)、26(3次)、39(4次)、40(3次)、41(3次)、42(3次)、43(4次)、44(4次)、49(3次)等19名用户存在频繁申贷行为，占比38%。符合背债人短期内多头借贷、快速套现的行为模式。",
      "confidence": 0.9
    },
    {
      "feature_value": "手机在网时长短（<=6个月）",
      "risk_level": "中",
      "reason": "用户2(8个月)、5(6个月)、7(4个月)、13(3个月)、16(5个月)、17(2个月)、31(7个月)、32(5个月)、36(3个月)、42(5个月)、46(6个月)等11名用户手机号使用时间较短，占比22%。新办手机号常被用于切断历史联系，躲避催收，是背债人身份不稳定的表现。",
      "confidence": 0.75
    },
    {
      "feature_value": "社保评分与收入/职业的明显不匹配",
      "risk_level": "中",
      "reason": "用户20社保评分仅26分，但其申报年收入为53000元，单位名称为“文具店”，评分极低与相对“正常”的收入和职业描述矛盾，疑似社保缴纳基数异常或单位异常。用户34社保评分68分，单位“电器销售公司”，收入43000，评分也偏低。低社保评分可能反映单位规模小、缴纳不规范或挂靠单位。",
      "confidence": 0.7
    },
    {
      "feature_value": "首次成为我行用户年龄小（<=22岁）且当前有贷款申请",
      "risk_level": "中",
      "reason": "用户1(22岁)、3(21岁)、6(20岁)、7(22岁)、13(20岁)、16(22岁)、17(21岁)、22(22岁)、25(20岁)、26(21岁)、30(22岁)、36(20岁)、39(22岁)、42(22岁)、46(22岁)、50(22岁)等16名用户，在非常年轻的年龄即成为银行客户，并在当前时点（数据中申请时间）有新的贷款申请。可能被中介过早开发为“白户”资源进行培养和利用。",
      "confidence": 0.65
    },
    {
      "feature_value": "户籍所在地与居住地/工作地跨省分离",
      "risk_level": "低",
      "reason": "几乎所有用户户籍地与居住地均不一致，且多为跨省（如河北户籍在北京、江苏户籍在上海）。虽然人口流动普遍，但结合其他高风险特征（如公积金异常、频繁申贷），这种分离可能被中介利用，增加信息核查难度和违约后追索成本。",
      "confidence": 0.6
    },
    {
      "feature_value": "工作单位名称特征（小型、个体经营、高频行业）",
      "risk_level": "低",
      "reason": "大量用户工作单位名称为“XX店”、“XX中心”、“XX工作室”、“XX餐饮公司”、“XX物流”、“XX科技”（疑似空壳）等，如“水果店”、“宠物店”、“花店”、“网吧”、“便利店”、“美容院”、“家政服务”。这些行业门槛低、经营变动大，易于伪造工作证明，是中介包装背债人的常用选择。",
      "confidence": 0.7
    },
    {
      "feature_value": "学历集中在中专、高中、大专",
      "risk_level": "低",
      "reason": "用户数据中本科学历仅约10人，其余均为大专、高中、中专。较低学历群体可能对金融风险认知不足，经济压力相对较大，更易被中介以“轻松获利”话术诱导成为背债人。",
      "confidence": 0.55
    },
    {
      "feature_value": "数据缺失关键字段（无负债总额、无具体逾期记录、无流水信息）",
      "risk_level": "中",
      "reason": "提供的用户数据中，缺失对判断还款能力与意愿至关重要的字段，如：现有负债总额、历史逾期详情、银行流水细节、资产证明真伪核查记录、贷款资金流向。这些数据的缺失导致无法挖掘“负债收入比畸高”、“流水造假”、“资金快进快出至关联账户”等核心背债特征，严重限制了特征挖掘的深度。",
      "confidence": 1.0
    }
  ]
}


七、输出格式示例
要求严格按照下面的输出格式输出结果，不输出多余的东西：
---
- [社保评分与收入/职业的明显不匹配] | 风险等级：高 | 原因：
- [新增借贷爆发式增长] | 风险等级：中 | 原因：

"""

    def match_features(self, state: State) -> dict:
        # Avoid str.format interpreting JSON braces as placeholders.
        prompt = self.prompt_template.replace("{user_data}", state["analysis_data"])
        response = self.llm.invoke(prompt)
        return {"response": state["response"] + "已经执行feature_matching", "feature": response.content}
        
    
