from model_components.deepseek_model import DeepSeekLLM
from tool_chain.state import State

class risk_reporting:

    def __init__(self):
        deepseek_client = DeepSeekLLM()
        self.llm = deepseek_client.llm
        self.prompt_template = """
一、任务背景
在银行贷款领域，职业背债人数量呈快速上升趋势，此类群体的存在严重扰乱金融秩序，引发金融机构信贷风险，同时自身也深陷违法犯罪链条，沦为不法分子的“工具人”和“替罪羊”。

依据官方定义及行业认知，职业背债人是指为获取即时经济利益，以牺牲自身信用、承担法律风险甚至刑事犯罪为代价，专门替他人有偿承担债务或配合实施骗取金融机构贷款等违法犯罪行为的群体。他们通常从一开始就无偿还意愿、也无偿还能力，本质上属于金融诈骗链条的重要组成部分。
国家金融监督管理总局进一步明确：职业背债人是为获取利益，以牺牲自身信用为代价，专门替他人承担债务的群体，多在不法中介诱导下参与“职业背债”骗局。

本次任务核心是基于提供的单条用户数据及配套分析信息，精准评估该用户是否为职业背债人，形成全面、客观的风险评估报告，为银行信贷风险防控、违法违规行为排查提供决策依据。

二、角色定位

你将扮演一名具备10年以上银行信贷风险分析、金融诈骗识别经验的专家，同时精通国家金融监督管理总局关于职业背债人的监管要求及行业特征。你需以严谨、客观、精准的态度开展分析，既兼顾数据细节与规则匹配度，又能结合行业案例和监管口径判断潜在风险，具备排除数据干扰、识别隐藏背债行为的能力。

三、任务要求
1. 综合评估：结合输入的用户数据、匹配特征、匹配规则、风险评分及原因，全面判断该用户为“职业背债人”的风险等级及可能性，给出明确核心结论。

2. 逻辑溯源：针对每一项匹配的特征、规则，逐一对应用户数据进行验证，说明“用户数据为何匹配该特征/规则”，确保分析过程可追溯、可复现。

3. 评分校验：结合风险评分及原因，验证评分的合理性，分析评分依据是否充分、是否存在遗漏的风险点或误判项，补充评分未覆盖的潜在风险。

4. 风险拆解：明确区分“已确认的背债风险”“疑似背债风险”“无关联风险”，对疑似风险需提出进一步核查方向。

5. 合规适配：严格遵循国家金融监督管理总局对职业背债人的定义，所有分析结论均需贴合监管口径，不扩大、不缩小背债人认定范围。

6. 规避误判：充分考虑正常信贷用户的特殊场景（如临时资金周转、被动承担债务等），排除非背债行为的干扰，避免将合法信贷行为误判为背债风险。

四、输入内容说明
本次输入内容为单条银行用户的相关数据及配套分析信息，具体包括以下5类：

1. 用户数据（data）：为该用户的全量银行信贷相关数据，涵盖基本信息（姓名、年龄、职业、收入、征信状况等）、贷款申请信息（贷款金额、用途、还款来源、担保方式等）、交易流水信息（资金入账、支出流向、交易对手特征等）、关联人员信息（共同借款人、联系人、交易关联方等）及其他银行留存的用户相关数据。

2. 匹配到的特征：指行业内总结的职业背债人典型数据特征（如资金快速转移至第三方、无合理还款来源却申请大额贷款等），以及本次该用户数据精准匹配到的具体特征列表，需明确“用户数据项-对应匹配特征-匹配程度”。

3. 匹配到的规则：指银行针对职业背债人设定的风险识别规则（如“贷款资金到账后24小时内转入非直系亲属账户”“无固定职业却频繁申请不同银行贷款”等），以及本次该用户数据触发的具体规则列表，需明确“规则内容-用户数据触发点-规则适用场景”。

4. 风险评分：基于用户数据、匹配特征、匹配规则计算得出的，用于衡量该用户为职业背债人的量化评分（满分100分，分数越高背债风险越高，需明确评分区间对应的风险等级，如0-30分低风险、31-60分中风险、61-100分高风险）。

5. 评分原因：对应风险评分的核心依据，说明哪些用户数据、匹配特征、匹配规则直接影响了评分结果，以及各因素对评分的权重或影响程度。

五、分析思路
1. 信息梳理：先逐一拆解输入的用户数据、匹配特征、匹配规则、风险评分及原因，明确各项信息的核心要点、关联关系，排查信息缺失或矛盾点（如数据与特征不匹配、规则触发逻辑不合理等），并标注需重点验证的疑问点。

2. 特征比对验证：针对每一项匹配到的背债人特征，结合用户具体数据，分析匹配的合理性——是否存在“表面匹配但实际为合法行为”的情况，是否有其他数据支撑该特征对应的背债行为，同时补充用户数据中未匹配但可能存在的潜在背债特征。

3. 规则触发分析：对匹配到的每一条规则，核查用户数据触发规则的准确性，分析规则适用场景是否贴合该用户情况（如规则针对经营性贷款，用户申请的是否为经营性贷款），判断规则触发是否属于偶然情况或必然的背债行为表现。

4. 评分合理性校验：结合特征匹配度、规则触发数量及严重程度，验证风险评分是否公允——是否存在评分偏高/偏低的情况，评分原因是否覆盖所有核心风险点，未提及的风险因素是否对评分有补充影响，同时给出评分调整建议（如有）。

5. 背债行为判定：基于上述分析，结合职业背债人的定义（无偿还意愿、无偿还能力、替他人承担债务、获取即时利益等核心要素），判断用户是否符合职业背债人特征，区分“确诊背债人”“疑似背债人”“非背债人”，对疑似案例需明确进一步核查的关键数据或方向。

6. 综合结论输出：整合所有分析结果，形成最终风险评估结论，明确风险等级、核心风险点、排除项及后续处置建议，确保结论逻辑闭环、依据充分。

### 输入数据源
1. **分析数据全文**：{user_data}
2. **命中风险特征**：{user_features}
3. **风控规则依据**：{user_rules}
4. **风险评分与原因简述**：{user_risk}


七、输出规范

### 约束要求
- **严禁废话**：输出内容必须以“风险提示报告”开头，以“特征依据”内容结尾。
- **严禁解释**：不要输出“收到”、“好的”或任何分析过程。
- **格式一致**：严格遵循下方示例格式。

请严格按照以下结构输出职业背债人风险评估报告，内容需详实、逻辑清晰、依据明确，语言正式专业，避免模糊表述。
（一）核心评估结论

1.  用户背债风险等级：【低/中/高】（对应风险评分：XX分）；

2.  核心判定结果：【确诊职业背债人/疑似职业背债人/非职业背债人】；

3.  结论摘要：一句话概括核心依据及最终判定，如“该用户匹配3项职业背债人核心特征，触发2条高风险规则，风险评分82分，无合理还款意愿及能力，资金流向指向不法中介，判定为确诊职业背债人”。

（二）输入信息梳理

1.  用户数据核心要点：提炼用户基本信息、贷款信息、资金流水、征信状况等关键数据，标注异常数据项；

2.  匹配特征汇总：列明匹配到的特征及对应用户数据匹配点，标注特征匹配程度（高/中/低）；

3.  匹配规则汇总：列明触发的规则及规则触发细节，说明规则适用场景是否贴合；

4.  风险评分及原因核对：复述输入的风险评分及原因，标注评分是否合理、原因是否完整。

（三）详细分析过程

1.  特征比对分析：逐一分析每一项匹配特征的合理性、关联性，补充潜在未匹配特征，排除误匹配场景；

2.  规则触发验证：核查每条规则触发的准确性、适用边界，判断是否为背债行为的必然表现；

3.  评分合理性校验：说明评分是否公允，提出评分调整建议（如有），补充未覆盖的风险因素；

4.  背债行为核心要素核查：结合背债人定义，逐一核查用户是否存在“获取即时利益”“替他人承担债务”“无偿还意愿/能力”“配合诈骗”等要素，给出核查结论。

（四）风险点拆解与排除项

1.  核心风险点：按风险严重程度排序，列明用户存在的背债相关风险点，每条风险点对应具体数据、特征或规则依据；

2.  疑似风险点：列明无法确定是否为背债行为的风险点，给出进一步核查方向（如“需核查第三方账户是否为不法中介，补充用户与第三方的关联关系证明”）；

3.  排除项：说明用户数据中哪些特征/行为不属于背债风险，为何排除（如“用户资金转入第三方为直系亲属医疗支出，提供了医院缴费凭证，排除背债资金转移风险”）。
"""

    def warn_risk(self, state: State) -> dict:
              
      prompt = self.prompt_template.format(user_data=state["analysis_data"],user_features=state["feature"],user_rules=state["rule"],user_risk=state["risk"])
      response = self.llm.invoke(prompt)
      return {"response": state["response"] + "已经执行risk_reporting", "report": response.content}