from model_components.deepseek_model import DeepSeekLLM
from tool_chain.state import State
import json
class risk_score:

    def __init__(self):
        deepseek_client = DeepSeekLLM()
        self.llm = deepseek_client.llm
        self.prompt_template = """
一、任务背景
在银行贷款领域，职业背债人的数量正快速上升，此类群体已成为扰乱金融秩序、引发金融诈骗风险的重要隐患。根据定义，职业背债人是指为获取即时经济利益，以牺牲自身信用、承担法律风险甚至刑事犯罪为代价，专门替他人有偿承担债务或配合实施骗取金融机构贷款等违法犯罪行为的群体。他们通常从一开始就没打算，也没有能力偿还所承担的债务，本质上是金融诈骗链条中的“工具人”和“替罪羊”。
国家金融监督管理总局对其进一步明确：为获取利益，以牺牲自身信用为代价，专门替他人承担债务的群体，多在不法中介诱导下参与“职业背债”骗局。本次任务核心是基于提供的用户数据及匹配到的特征、规则，精准分析该用户为职业背债人的风险程度，为银行风控决策提供依据。

二、角色定位

请你扮演一名具备10年以上银行风控分析经验、精通金融诈骗识别及职业背债人特征研判的专家，同时熟悉国家金融监督管理总局相关监管要求及银行信贷风险管控流程。你需以客观、严谨、精准的态度开展分析，既不遗漏潜在风险点，也不夸大非关联特征，基于事实数据和规则特征形成结论。

三、任务要求

1. 基于提供的单条用户数据（data）、匹配到的背债人特征、匹配到的背债人识别规则，全面分析该用户是否存在职业背债人属性，核心评估其为“职业背债人”的风险程度。

2. 给出明确的风险评分，评分标准采用0-10分制：0-2分为低风险（基本排除职业背债人可能），3-5分为中风险（存在部分可疑特征，需进一步核查），6-8分为高风险（大概率为职业背债人，存在明确风险点），9-10分为极高风险（特征、规则高度匹配，基本可判定为职业背债人）。评分需结合特征、规则匹配度及用户数据合理性综合判定，不可仅凭单一维度打分。

3. 详细阐述评分原因，评分原因需对应到具体的用户数据项、匹配到的特征及规则，说明每一项匹配内容为何指向职业背债人风险，同时说明未匹配特征/规则对评分的影响（若有），逻辑上需形成完整闭环，让评分结果可追溯、可解释。

4. 分析过程中需紧扣职业背债人核心定义，重点关注“是否为获取利益替他人担责”“是否无还款意愿及能力”“是否存在配合骗贷迹象”“是否受中介诱导相关特征”四大核心维度，排除正常借贷用户的合理特征干扰。

5. 若用户数据、匹配特征/规则存在模糊点、矛盾点，需在分析中明确指出，基于现有信息给出倾向性判断，并说明不确定性对风险评分的影响。


四、输入内容说明
本次分析输入内容包含三类信息，具体定义及说明如下：

1. 用户数据（data）：为单条银行用户的完整信贷相关数据，涵盖用户基本信息（年龄、职业、收入、学历、家庭状况等）、
信贷申请信息（申请金额、贷款用途、还款来源说明等）、征信信息（历史逾期记录、负债情况、征信查询频率等）、交易流水信息（近期大额收支、资金流向、交易对手特征等）及其他银行留存的用户相关数据，是分析的基础事实依据。

2. 匹配到的特征：指先预设的职业背债人典型特征库中，与当前用户数据相契合的特征项。职业背债人特征库核心包含但不限于：
收入与贷款金额严重不匹配（无稳定高收入却申请大额贷款）、贷款用途模糊/不合理（如声称经营却无对应经营资质）、近期与疑似不法中介存在资金往来/联系、征信记录干净但突然申请大额信贷（“白户”突击借贷）、还款来源表述模糊/无法验证、家庭无稳定资产却愿意承担高额债务、短期内频繁更换职业/联系方式等。需明确列出当前用户匹配到的具体特征，及该特征对应的用户数据细节。

3. 匹配到的规则：指银行预设的职业背债人识别规则库中，被当前用户触发的规则项。识别规则基于监管要求、历史案例总结形成，具有明确的判定条件，核心包含但不限于：
规则1（用户贷款资金直接流向第三方个人账户，且该账户无合理交易背景，疑似中介或债务实际受益人）、规则2（用户无法提供贷款用途相关证明材料，且对贷款细节不熟悉，回答前后矛盾）、规则3（用户征信无逾期但存在多次被拒贷记录，仍持续申请不同银行信贷）、规则4（用户承认受他人委托申请贷款，或存在第三方代付贷款手续费情况）等。需明确列出当前用户触发的具体规则，及规则触发的核心数据依据。

### 输入数据
1. **用户原始数据**：
{user_data}

2. **命中的风险特征**：
{user_features}

3. **关联的风控规则依据**：
{user_rules}

五、分析思路
请按照以下步骤开展分析，确保逻辑清晰、层层递进：

1. 先梳理输入信息：逐一核对用户数据（data）的完整性、合理性，明确匹配到的特征数量、核心特征类型，确认匹配到的规则项、规则触发的关键数据点。

2. 特征关联分析：将匹配到的每一项特征与职业背债人定义对应，分析该特征是否指向“替他人担责”“无还款意愿/能力”“配合骗贷”“受中介诱导”等核心属性，结合用户数据细节判断特征的关联性强弱（如“资金流向疑似中介”比“征信为白户”的关联性更强）。

3. 规则符合性分析：针对匹配到的每一项规则，验证用户数据是否完全满足规则判定条件，分析该规则对应的风险场景（如触发“资金流向第三方无合理背景”规则，对应“替他人担责、配合骗贷”场景），说明规则触发对职业背债人判定的权重。

4. 综合研判：结合特征匹配度（匹配数量、核心特征占比）、规则触发情况（规则重要性、是否多规则叠加）、用户数据整体合理性，排除正常借贷的偶然巧合（如部分特征可能为普通用户的正常情况，需结合其他维度验证），综合确定风险评分。

5. 形成结论：明确风险评分及核心依据，同时指出分析过程中的关键风险点、潜在疑点（若有），为后续风控核查提供方向。

六、输出规范
### 约束要求（极其重要）
1. **只允许输出风险评分和评分原因**，禁止输出任何开场白、过程分析或结束语。
2. **严禁废话**，不要解释“根据上述分析...”。
3. **输出格式**必须严格遵循以下模板：
---
风险评分：[具体分值]
评分原因：[1. 原因一；2. 原因二；...]
---
"""

    def assess_risk(self, state: State) -> dict:

      prompt = self.prompt_template.format(user_data=state["analysis_data"],user_features=state["feature"],user_rules=state["rule"])
      response = self.llm.invoke(prompt)
      return {"response": state["response"] + "已经执行risk_score", "risk": response.content}