from model_components.deepseek_model import DeepSeekLLM
from tool_chain.state import State

class rule_mining:

   def __init__(self):
      deepseek_client = DeepSeekLLM()
      self.llm = deepseek_client.llm
      self.prompt_template = """
一、任务背景
在银行贷款领域，职业背债人的数量在快速上升。职业背债人是指为获取即时经济利益，以牺牲自身信用、承担法律风险甚至刑事犯罪为代价，专门替他人有偿承担债务或配合实施骗取金融机构贷款等违法犯罪行为的群体。
他们通常从一开始就没打算，也没有能力偿还所承担的债务，本质上是金融诈骗链条中的“工具人”和“替罪羊”。国家金融监督管理总局对其定义为：为获取利益，以牺牲自身信用为代价，专门替他人承担债务的群体，多在不法中介诱导下参与“职业背债”骗局。
本次需基于提供的背债人数据及已挖掘特征，挖掘隐藏的背债模式规则，为银行识别职业背债人、防范金融诈骗提供支撑。

二、角色定位

你是一名具备丰富银行反欺诈经验、精通用户行为数据分析的金融风险分析师，同时熟悉职业背债人作案逻辑及金融监管相关要求。需以严谨的逻辑、客观的视角，基于给定特征和数据，挖掘特征组合规则，聚焦“单点特征尚可解释、组合后极不合理”的核心场景。

三、任务要求

1. 核心目标：从提供的背债人数据中，提取职业背债人的行为规则，规则需为“单点特征”通过AND/OR逻辑进行的组合，重点挖掘“单看某一点尚可解释，但组合在一起极不合理”的背债模式，排除单一特征直接可判定的场景。

2. 规则要求：每个规则需明确特征间的逻辑关系（AND/OR），说明组合后的不合理性，结合已挖掘特征的风险等级、置信度，评估规则的可靠性，同时关联职业背债人的核心行为逻辑（如伪造身份、多头套现、躲避催收等）。

3. 分析约束：严格基于已挖掘的特征及输入数据展开，不添加无依据的特征假设；若数据存在缺失字段，需在规则分析中说明对判断的影响。

4. 优先级：优先组合高风险特征，再结合中低风险特征交叉验证；优先挖掘出现频次高、置信度高的特征组合，确保规则的实用性和可落地性。

四、输入内容说明
1. 已挖掘特征集：包含10项背债人特征，每项特征明确了特征值、风险等级（高/中/低）、支撑理由（含用户案例、占比）及置信度，具体如下：
        {{
  "mined_features": [
    {
      "feature_value": "公积金账户状态异常（未缴纳/冻结）",
      "risk_level": "高",
      "reason": "用户3、9、11、12、13、15、19、21、23、25、32、42、44、46等共14名用户公积金状态为“未缴纳”或“冻结”，占比28%。此状态与申报的稳定职业及贷款需求严重不符，是职业背债人伪造工作证明的典型特征。",
      "confidence": 0.85
    },
    {
      "feature_value": "近12个月贷款申请次数>=3次",
      "risk_level": "高",
      "reason": "用户1(6次)、2(5次)、4(4次)、14(2次)、15(4次)、18(3次)、19(5次)、20(3次)、23(4次)、24(4次)、25(5次)、26(3次)、39(4次)、40(3次)、41(3次)、42(3次)、43(4次)、44(4次)、49(3次)等19名用户存在频繁申贷行为，占比38%。符合背债人短期内多头借贷、快速套现的行为模式。",
      "confidence": 0.9
    },
    {
      "feature_value": "手机在网时长短（<=6个月）",
      "risk_level": "中",
      "reason": "用户2(8个月)、5(6个月)、7(4个月)、13(3个月)、16(5个月)、17(2个月)、31(7个月)、32(5个月)、36(3个月)、42(5个月)、46(6个月)等11名用户手机号 使用时间较短，占比22%。新办手机号常被用于切断历史联系，躲避催收，是背债人身份不稳定的表现。",
      "confidence": 0.75
    },
    {
      "feature_value": "社保评分与收入/职业的明显不匹配",
      "risk_level": "中",
      "reason": "用户20社保评分仅26分，但其申报年收入为53000元，单位名称为“文具店”，评分极低与相对“正常”的收入和职业描述矛盾，疑似社保缴纳基数异常或单位异常。用户34社保评分68分，单位“电器销售公司”，收入43000，评分也偏低。低社保评分可能反映单位规模小、缴纳不规范或挂靠单位。",
      "confidence": 0.7
    },
    {
      "feature_value": "首次成为我行用户年龄小（<=22岁）且当前有贷款申请",
      "risk_level": "中",
      "reason": "用户1(22岁)、3(21岁)、6(20岁)、7(22岁)、13(20岁)、16(22岁)、17(21岁)、22(22岁)、25(20岁)、26(21岁)、30(22岁)、36(20岁)、39(22岁)、42(22岁)、46(22岁)、50(22岁)等16名用户，在非常年轻的年龄即成为银行客户，并在当前时点（数据中申请时间）有新的贷款申请。可能被中介过早开发为“白户”资源进行培养和利 用。",
      "confidence": 0.65
    },
    {
      "feature_value": "户籍所在地与居住地/工作地跨省分离",
      "risk_level": "低",
      "reason": "几乎所有用户户籍地与居住地均不一致，且多为跨省（如河北户籍在北京、江苏户籍在上海）。虽然人口流动普遍，但结合其他高风险特征（如公积金异常 、频繁申贷），这种分离可能被中介利用，增加信息核查难度和违约后追索成本。",
      "confidence": 0.6
    },
    {
      "feature_value": "工作单位名称特征（小型、个体经营、高频行业）",
      "risk_level": "低",
      "reason": "大量用户工作单位名称为“XX店”、“XX中心”、“XX工作室”、“XX餐饮公司”、“XX物流”、“XX科技”（疑似空壳）等，如“水果店”、“宠物店”、“花店”、“网吧” 、“便利店”、“美容院”、“家政服务”。这些行业门槛低、经营变动大，易于伪造工作证明，是中介包装背债人的常用选择。",
      "confidence": 0.7
    },
    {
      "feature_value": "学历集中在中专、高中、大专",
      "risk_level": "低",
      "reason": "用户数据中本科学历仅约10人，其余均为大专、高中、中专。较低学历群体可能对金融风险认知不足，经济压力相对较大，更易被中介以“轻松获利”话术诱 导成为背债人。",
      "confidence": 0.55
    },
    {
      "feature_value": "数据缺失关键字段（无负债总额、无具体逾期记录、无流水信息）",
      "risk_level": "中",
      "reason": "提供的用户数据中，缺失对判断还款能力与意愿至关重要的字段，如：现有负债总额、历史逾期详情、银行流水细节、资产证明真伪核查记录、贷款资金流 向。这些数据的缺失导致无法挖掘“负债收入比畸高”、“流水造假”、“资金快进快出至关联账户”等核心背债特征，严重限制了特征挖掘的深度。",
      "confidence": 1.0
    }
  ]
}}

原始用户数据
{user_data}

五、分析思路
1. 特征拆解：先逐一梳理已挖掘特征的核心逻辑——高风险特征聚焦“伪造证明、多头套现”，中风险特征聚焦“身份不稳定、信息矛盾”，低风险特征聚焦“场景适配性低、需交叉验证”，明确每个特征的独立解释空间。

2. 组合筛选：基于输入数据，对不同风险等级的特征进行多重组合，排除单一特征即可直接判定的情况，重点筛选“单点看似合理（如跨省流动、低学历），组合后与背债人行为逻辑高度契合”的场景。

3. 合理性验证：对筛选出的特征组合，结合职业背债人的核心属性（无还款意愿/能力、中介诱导、伪造信息、快速套现），分析组合的不合理性，同时关联数据中的用户案例（如特定用户同时满足的特征组合），验证组合的普遍性。

4. 规则提炼：对验证通过的组合，明确逻辑关系（AND/OR），补充风险等级、置信度（基于组合中各特征置信度加权计算）及核心依据，形成可落地的背债模式规则。

5. 局限说明：针对数据缺失关键字段的问题，说明其对部分特征组合判断的影响，标注需补充数据进一步验证的规则。


六、输出规范
请请尽可能多的输出特征的同时，严格按照以下格式输出特征组合规则，每条规则独立成项，内容完整、逻辑清晰，可直接用于银行反欺诈模型优化及人工核查指引：
### 规则构建指南
背债人通常具有“包装出的完美外壳”和“无法掩盖的底层矛盾”。请遵循以下逻辑构建规则：
1. **矛盾性组合**：例如 [低学历高负债] + [公积金断缴] -> 说明收入证明造假，且资金链已断裂。
2. **时序性组合**：例如 [异地运营商使用] + [新增借贷爆发式增长] -> 说明是近期专门为了骗贷购置的手机号。
3. **资质与行为不符**：典型底层群体被包装成优质客户后“杀鸡取卵”。

### 输出要求
请输出严格的 JSON 格式，包含一个规则列表 `rules`。每条规则必须包含：
- `rule_name`: 规则名称（如：断缴期突击借贷规则）。
- `logic_expression`: 逻辑表达式（如：公积金断缴 AND 多头借贷 > 5）。
- `risk_verdict`: 判定结果（高风险背债人 / 疑似背债人）。
- `reasoning`: 为什么这个组合能判定为背债人（深度业务逻辑解释）。
- `confidence`: 置信度 (0.8 - 1.0)。

### 输出示例
{{
    "rules": [
        {{
            "rule_name": "空壳包装突击规则",
            "logic_expression": "公积金状态异常 AND 手机在网<6个月 AND 借贷次数>4",
            "risk_verdict": "高风险背债人",
            "reasoning": "用户公积金异常说明无稳定收入来源，却使用新手机号在短期内疯狂借贷，符合中介包装‘白户’进行最后一波收割的特征。",
            "confidence": 0.95
        }}
    ]
}}
"""

   ''' def mine_rules(self, state: State) -> dict:
        prompt = self.prompt_template.format(text=state["text"])
        response = self.llm.invoke(prompt)
        return {"text": state["text"] + "rule_mining", "response": response.content}'''
    
   def mine_rules(self, state: State):
      # 将 List[Dict] 转换为更易读的文本格式
      user_data_str = ""
      for i, d in enumerate(state["data"]):
         user_data_str += f"用户{i+1}: {str(d)}\n"
        

      
      # 调用大模型
      # Use a simple replace to avoid treating JSON braces as format tokens.
      prompt = self.prompt_template.replace("{user_data}", user_data_str)
      response = self.llm.invoke(prompt)
        
      # 将结果存入 state
      state["new_rule"] = response.content
      return state
